<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tool Browser</string>
    <string name="search_or_enter_url">Search or enter URL</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="new_tab">New Tab</string>
    <string name="bookmark">Bookmark</string>
    <string name="tabs">Tabs</string>
    <string name="menu">Menu</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="desktop_site">Desktop Site</string>
    <string name="share">Share</string>
    <string name="copy_url">Copy URL</string>
    <string name="clear_data">Clear Data</string>
    <string name="close_tab">Close tab</string>
    <string name="data_cleared">Browsing data cleared</string>
    <string name="url_copied">URL copied</string>
    <string name="share_url">Share URL</string>
    <string name="copy_cookie">Copy Cookies</string>
    <string name="user_scripts">User Scripts</string>
    <string name="settings">Settings</string>
    <string name="cookies_copied">Cookies copied to clipboard</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="ad_block_enabled">Ad Blocking Enabled</string>
    <string name="ad_block_disabled">Ad Blocking Disabled</string>
    <string name="clear_on_exit">Clear browser data on exit</string>
    <string name="homepage_url">Default homepage URL</string>
    <string name="general_settings">General Settings</string>
    <string name="theme_toggle">Toggle Theme</string>
    <string name="script_from_url">From URL</string>
    <string name="script_from_file">From File</string>
    <string name="script_from_text">Enter Script</string>
    <string name="add_script">Add Script</string>
    <string name="delete_script">Delete script</string>
    <string name="no_scripts">No user scripts added yet.</string>
    <string name="script_added">Script added</string>
    <string name="script_deleted">Script deleted</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="script_updated">Script updated</string>
</resources>
